--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -1,2 +1,44 @@
-<!--pages/category/index.wxml-->
-<text>pages/category/index.wxml</text>
+<view class="cates">
+  <!-- 顶部搜索 -->
+  <SearchInput></SearchInput>
+  <!-- 分类主体 -->
+  <view class="cates_container">
+  <!-- 左侧 -->
+  
+    <scroll-view class="left_menu" scroll-y="{{true}}">
+      <view
+        class="menu_item {{index==currentIndex?'active':''}}"
+        wx:for="{{leftMenuList}}"
+        wx:key="item"
+        bindtap="handleItemTab"
+        data-index="{{index}}"
+      >{{item}}</view>
+    </scroll-view>
+  <!-- 右侧商品内容 -->
+    <scroll-view class="right_content" scroll-y="{{true}}" scroll-top="{{scrollTop}}">
+      <view class="content_item"
+        wx:for="{{rightContent}}"
+        wx:for-item="item1"
+        wx:for-index="index1"
+        wx:key="cat_id"
+      >
+        <view class="content_title">
+          <text class="delimiter">/</text>
+          <text>{{item1.cat_name}}</text>
+          <text class="delimiter">/</text>
+        </view>
+        <view class="content_box">
+          <navigator 
+            wx:for="{{item1.children}}"
+            wx:for-item="item2"
+            wx:key="cat_id"
+          >
+            <image mode="widthFix" src="{{item2.cat_icon}}"></image>
+            <text>{{item2.cat_name}}</text>
+          </navigator>
+        </view>
+      </view>
+    </scroll-view>
+  </view>
+
+</view>
