--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,1 +1,59 @@
 /* pages/category/index.wxss */
+page {
+  height: 100%;
+}
+.cates {
+  height: 100%;
+}
+.cates .cates_container {
+  height: calc(100vh - 90rpx);
+  display: flex;
+}
+.cates .cates_container .left_menu {
+  flex: 2;
+}
+.cates .cates_container .left_menu .menu_item {
+  height: 70rpx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30rpx;
+}
+.cates .cates_container .left_menu .active {
+  color: var(--themeColor);
+  border-left: 8rpx solid currentColor;
+}
+.cates .cates_container .right_content {
+  flex: 5;
+}
+.cates .cates_container .right_content .content_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cates .cates_container .right_content .content_item .content_title {
+  height: 70rpx;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+.cates .cates_container .right_content .content_item .content_title .delimiter {
+  color: #ccc;
+  padding: 0 10rpx;
+}
+.cates .cates_container .right_content .content_item .content_box {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 30rpx;
+}
+.cates .cates_container .right_content .content_item .content_box navigator {
+  width: 33.33%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+.cates .cates_container .right_content .content_item .content_box navigator image {
+  width: 90%;
+}
