--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -11,3 +11,45 @@
     }
   }
 }
+.index_cate{
+  display: flex;
+  navigator{
+    flex:1;
+    padding: 20rpx;
+    image{
+      width: 100%;
+    }
+  }
+}
+.index_floor{
+  .floor_group{
+    .floor_title{
+      image{
+        width: 100%;
+      }
+    }
+    .floor_list{
+      
+      navigator{
+        float: left;
+        width: 33.33%;
+        /* 原图的宽高 232 *386 */
+      // 232 / 386 = 33.33vw / height
+      // 第一张图片的高度 height:33.33vw * 386 /  232
+        &:nth-last-child(-n+4){
+          height: 33.33vw * 386 / 232 /2;
+          border-left: 10rpx solid #fff;
+        }
+        &:nth-child(2),
+        &:nth-child(3){
+          border-bottom: 10rpx solid #fff;
+        }
+
+        image{
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+}
