--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -13,4 +13,37 @@
       </swiper-item>
     </swiper>
   </view>
+  <view class="index_cate">
+    <navigator class="nav_item"
+      wx:for="{{navList}}"
+      wx:key="name"
+      open-type="switchTab"
+      url="pages/category/index"
+    >
+      <image src="{{item.image_src}}" mode="widthFix"></image>
+    </navigator> 
+  </view>
+  <view class="index_floor">
+    <view class="floor_group"
+      wx:for="{{floorList}}"
+      wx:for-item="item1"
+      wx:for-index="index1"
+      wx:key="floor_title"
+    >
+      <view class="floor_title">
+        <image class="title" mode="widthFix" src="{{item1.floor_title.image_src}}"></image>
+      </view>
+      <view  class="floor_list">
+        <navigator
+          wx:for="{{item1.product_list}}"
+          wx:for-item="item2"
+          wx:for-index="index2"
+          wx:key="name"
+          url="{{item2.navigator_url}}"
+        >
+          <image mode="{{index2==0?'widthFix':'scaleToFill'}}" src="{{item2.image_src}}"></image>
+        </navigator>
+      </view>
+    </view>
+  </view>
 </view>
